Add buttons for reading and clearing words

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <h1 class="greeting">Hola Lucía</h1>
     <div id="cards"></div>
     <div id="dropzone" class="dropzone"></div>
+    <div class="buttons-container">
+        <button id="readWord">Leer palabra</button>
+        <button id="clearWord">Limpiar palabra</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
