Add sidebar and card groups to index.html and update styles.css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,38 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1 class="greeting">Hola Lucía</h1>
-    <div id="cards"></div>
-    <div id="dropzone" class="dropzone"></div>
-    <div class="buttons-container">
-        <button id="readWord">Leer palabra</button>
-        <button id="clearWord">Limpiar palabra</button>
+    <div class="container">
+        <div id="sidebar">
+            <div id="cards1"></div>
+            <div id="cards2"></div>
+            <div id="cards3"></div>
+            <div id="cards4"></div>
+            <div id="cards5"></div>
+            <div id="cards6"></div>
+            <div id="cards7"></div>
+            <div id="cards8"></div>
+            <div id="cards9"></div>
+            <div id="cards10"></div>
+            <div id="cards11"></div>
+            <div id="cards12"></div>
+            <div id="cards13"></div>
+            <div id="cards14"></div>
+            <div id="cards15"></div>
+            <div id="cards16"></div>
+            <div id="cards17"></div>
+            <div id="cards18"></div>
+            <div id="cards19"></div>
+            <div id="cards20"></div>
+        </div>
+        <div id="main-content">
+            <h1 class="greeting">Hola Lucía</h1>
+            <div id="dropzone" class="dropzone"></div>
+            <div class="buttons-container">
+                <button id="readWord">Leer palabra</button>
+                <button id="clearWord">Limpiar palabra</button>
+            </div>
+        </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
