Update title and remove greeting and add readme

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Logo-Bits Game</title>
+    <title>Lecto-bits</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -29,7 +29,6 @@
             <div id="cards20"></div>
         </div>
         <div id="main-content">
-            <h1 class="greeting">Hola Lucía</h1>
             <div id="dropzone" class="dropzone"></div>
             <div class="buttons-container">
                 <button id="readWord">Leer palabra</button>
